--- a/themes/default.less
+++ b/themes/default.less
@@ -80,6 +80,12 @@ iframe {
     }
     .item_touch {
         cursor: pointer;
+        .item_caption {
+            hyphens: auto;
+            word-wrap: break-word;
+            white-space: pre-line;
+            overflow: scroll;
+        }
     }
 }
 .item_small {
